<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".front_end.SearchDoctors">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="470dp"
        android:src="@drawable/spec_row_1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="602dp"
        android:text="Search Doctors"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/textInputEditText_searchName"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/rounded_rec"
        android:hint="Name"
        android:paddingStart="50sp"
        android:textColor="#A1A8B0"
        android:textSize="10dp" />

    <ImageView
        android:id="@+id/specIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="187dp"
        android:src="@drawable/search_icon" />

    <EditText
        android:id="@+id/searchDate"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/rounded_rec"
        android:hint="Date"
        android:paddingStart="50sp"
        android:textColor="#A1A8B0"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/searchSpec"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="342dp"
        android:background="@drawable/rounded_rec"
        android:hint="Specialization"
        android:paddingStart="50sp"
        android:textColor="#A1A8B0"
        android:textSize="10dp" />

    <ImageView
        android:id="@+id/specIcon2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="327dp"
        android:layout_marginBottom="187dp"
        android:src="@drawable/search_icon" />

    <EditText
        android:id="@+id/searchLoc"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="397dp"
        android:background="@drawable/rounded_rec"
        android:hint="Location"
        android:paddingStart="50sp"
        android:textColor="#A1A8B0"
        android:textSize="10dp" />

    <ImageView
        android:id="@+id/LocIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="187dp"
        android:src="@drawable/search_icon" />

    <ImageView
        android:id="@+id/dateIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="463dp"
        android:layout_marginEnd="325dp"
        android:layout_marginBottom="187dp"
        android:src="@drawable/calendar_icon" />

    <Button
        android:id="@+id/searchDoctorsNSLDButton"
        android:layout_width="119dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="517dp"
        android:background="@drawable/rectangle_1"
        android:text="Search"
        android:textColor="#FFFFFF"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/nameIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="187dp"
        android:src="@drawable/search_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchrv"
        android:layout_width="345dp"
        android:layout_height="124dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="-14dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="129dp"
        android:text="Search Results"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="396dp"
        android:src="@drawable/specialization_row_2" />


</RelativeLayout>