...
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:textColor="#101623"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButtonDocAvail" />

    <TextView
        android:id="@+id/textDoctorLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclerView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:textColor="#15195A"
        android:textSize="18sp"
        android:textStyle="bold"
...
