<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    android:background="@color/white"
    app:cardBackgroundColor="@color/white"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/textDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:textColor="#407C87"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11/09/2023"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/textDay" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2pm"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_below="@id/textDate" />

        <TextView
            android:id="@+id/textNoAppointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No. of Appointments: 2"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
